# 3DViewer

./: Makefile  README.md
Core/: 3DViever.h  CMakeLists.txt  affine.c  glwid.cpp  glwid.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.c
Dvi/: index.md
Tests/: CMakeLists.txt  s21_3DViever_Tests.c  s21_3DViever_Tests.h  s21_move_Tests.c  s21_parser_Tests.c  s21_rotate_Tests.c
